fixed outline scrolling problem, added overflow:scroll to #outline div.

--- a/mycms/media/readingStyle.css
+++ b/mycms/media/readingStyle.css
@@ -131,6 +131,7 @@
     width: 350px;
     position: absolute;
     padding-bottom: 10px;
+    overflow: scroll;
 /*	background-color: #EDEEE1;*/
 
     
